--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-*.js linguist-detectable=true
-*.css linguist-detectable=true
-*.php linguist-detectable=true
+*.java linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
