--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-*.java linguist-detectable=true
-*.js linguist-detectable=false
-*.html linguist-detectable=false
-*.xml linguist-detectable=false
+*.gs linguist-language=Javascript
