--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
     
-*.java linguist-detectable=true
-*.css linguist-detectable=false
+*.php linguist-detectable=true
+*.css linguist-detectable=true
 *.xml linguist-detectable=false
